@@ -2,4 +2,4 @@ D/images////
 /.cvsignore/1.4/Sun Dec 18 19:54:04 2005//
 /sms-gateway.fig/1.1/Sun Dec 18 19:54:04 2005//
 /wap-gateway.fig/1.2/Sun Dec 18 19:54:04 2005//
-/userguide.xml/1.329/Wed Apr 11 17:06:11 2007//
+/userguide.xml/1.330/Mon May 14 08:20:26 2007//
