@@ -46,7 +46,6 @@ D/smsc////
 /smscconn.h/1.18/Sun Jan 14 19:21:35 2007//
 /smscconn_p.h/1.50/Sun Jan 14 19:21:35 2007//
 /smskannel-ssl.conf/1.3/Sun Dec 18 19:54:08 2005//
-/smskannel.conf/1.18/Wed Jan 11 12:54:56 2006//
 /urltrans.c/1.106/Sun Jan 14 19:21:35 2007//
 /urltrans.h/1.35/Sun Jan 14 19:21:35 2007//
 /wap-appl.c/1.121/Tue Jan 30 23:54:36 2007//
@@ -81,10 +80,11 @@ D/smsc////
 /xml_shared.c/1.14/Sun Jan 14 19:21:36 2007//
 /xml_shared.h/1.10/Sun Jan 14 19:21:36 2007//
 /dlr.h/1.23/Tue Apr  3 14:27:44 2007//
-/sms.c/1.26/Wed Apr 11 17:19:01 2007//
 /smsbox.c/1.274/Wed Apr 11 18:34:19 2007//
-/bb_smscconn.c/1.92/Wed Mar 21 22:20:18 2007//
 /bb_smscconn_cb.h/1.16/Wed Mar 21 21:41:50 2007//
 /bearerbox.c/1.165/Wed Mar 21 22:13:55 2007//
 /bearerbox.h/1.32/Wed Mar 21 21:34:24 2007//
 /bb_boxc.c/1.90/Tue May 15 18:11:02 2007//
+/bb_smscconn.c/1.93/Wed May 16 09:56:23 2007//
+/sms.c/1.27/Fri May 18 16:19:23 2007//
+/smskannel.conf/1.18/Fri Jun  1 11:22:53 2007//
