@@ -74,11 +74,11 @@
 /octstr.h/1.94/Tue Feb 27 11:07:53 2007//
 /octstr.c/1.180/Wed Apr 18 08:09:09 2007//
 /mime.c/1.20/Wed Apr 18 08:08:09 2007//
-/cfg.def/1.128/Wed Mar 21 22:22:14 2007//
 /gwlib.c/1.24/Wed May  9 09:11:24 2007//
 /log.c/1.53/Wed May  9 09:11:17 2007//
 /list.h/1.27/Tue May 15 16:15:00 2007//
 /charset.c/1.26/Fri May 18 12:33:41 2007//
 /gw-prioqueue.c/1.6/Tue May 15 14:37:39 2007//
 /list.c/1.47/Fri May 18 12:32:03 2007//
+/cfg.def/1.129/Mon May 14 08:18:42 2007//
 D
