@@ -1,4 +1,10 @@
 2007-06-01 Alexander Malysh <amalysh at kannel.org>
+   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/sms.c,
+     gwlib/cfg.def: applied MO concatenation patch. This patch was
+     originally written by Paul Bagyenda and then extended by me.
+     Thanks Paul!
+
+2007-06-01 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: removed GSM-03.38 kludge because it's not
      necessary anymore.
 
